# test

./: CMakeLists.txt  test.txt
Arrays/: main.cpp
LinkList/: CMakeLists.txt  main.cpp
Mathematic/: main.cpp
strings/: main.cpp
